syntax = "proto3";

package chat;
option go_package = "./gen/chatpb";

// --- Message Definitions ---

message Auth {
  string token = 1;
}

// ClientMessage is sent by the browser client via the Gateway to the Chat Service.
message ClientMessage {
  string client_id = 1; // client generated id (for deduplication/ack)
  string from = 2;      // sender email or user_id
  string to = 3;        // recipient email or user_id
  string chat_id = 4;
  string text = 5;
  string file_id = 6;
  string msg_type = 7; // "text", "file", "audio"
  int64 created_at = 8; // epoch millis
}

// ServerMessage is stored in DB and broadcast to clients.
message ServerMessage {
  string server_id = 1; // DB ID (Guaranteed unique)
  string client_id = 2; // Copy of client_id for sender acknowledgement
  string from = 3;
  string to = 4;
  string chat_id = 5;
  string text = 6;
  string file_id = 7;
  string msg_type = 8;
  int64 created_at = 9;
}

// --- Stream RPC ---
message StreamRequest {
  oneof payload {
    Auth auth = 1;
    ClientMessage client_message = 2;
  }
}

message StreamResponse {
  oneof payload {
    ServerMessage server_message = 1;
  }
}

// --- History RPC ---

message ListHistoryRequest {
  string chat_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListHistoryResponse {
  repeated ServerMessage messages = 1;
}

// --- Service Definition ---

service ChatService {
  // Stream handles bidi stream: client sends Auth first then ClientMessage(s)
  rpc Stream(stream StreamRequest) returns (stream StreamResponse);
  
  // ListHistory loads message history over a standard unary RPC.
  rpc ListHistory(ListHistoryRequest) returns (ListHistoryResponse);
}